Added ability to apply to content.

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,8 +6,11 @@
       <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <div class="debug"></div>
+    <section class="articles"><div class="debug"></div></section>
     <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
     <script src="js/js-breakpoints.js"></script>
     <script src="js/bridge.js"></script>
+    <script src="js/test.js"></script>
   </body>
 </html>
