--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
   </head>
   <body>
     <div class="debug"></div>
-    <section class="articles"><div class="debug"></div></section>
+    <header class="header">
+      <div class="debug"></div>
+    </header>
+    <aside class="aside">
+      <div class="debug"></div>
+    </aside>
+    <section class="article">
+      <div class="debug"></div>
+    </section>
     <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
     <script src="js/js-breakpoints.js"></script>
     <script src="js/bridge.js"></script>
