--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="utf-8">
       <title>Breakpoint Bridge</title>
-      <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="demo.css">
   </head>
   <body>
     <div class="debug"></div>
@@ -16,9 +16,9 @@
     <section class="article">
       <div class="debug"></div>
     </section>
-    <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-    <script src="js/js-breakpoints.js"></script>
-    <script src="js/bridge.js"></script>
-    <script src="js/test.js"></script>
+    <script src="//code.jquery.com/jquery-2.1.0.min.js"></script>
+    <script src="./../source/js-breakpoints/breakpoints.js"></script>
+    <script src="./../source/breakpoint-bridge.js"></script>
+    <script src="demo.js"></script>
   </body>
 </html>
