--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <div class="debug"></div>
     </section>
     <script src="//code.jquery.com/jquery-2.1.0.min.js"></script>
-    <script src="./../source/js-breakpoints/breakpoints.js"></script>
-    <script src="./../source/breakpoint-bridge.js"></script>
+    <script src="source/js-breakpoints/breakpoints.js"></script>
+    <script src="source/breakpoint-bridge.js"></script>
     <script src="demo.js"></script>
   </body>
 </html>
