--- a/demo/source/index.html
+++ b/demo/source/index.html
@@ -15,6 +15,7 @@
     </aside>
     <section class="article">
       <div class="debug"></div>
+      <div class="process"></div>
     </section>
     <script src="//code.jquery.com/jquery-2.1.0.min.js"></script>
     <!-- build:js js/demo.js -->
